/*
 * Copyright (c) 2021-present,  NovaChat-Engine.
 *  All rights reserved.
 * 
 *  
 * @Author: Coder (coderxw@gmail.com)
 * @Time : 2023/02/09 16:57
 * @File : schema.tl.transport.proto
 * @Desc : 
 *
 */

syntax = "proto3";

package mtproto;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option go_package = "mtproto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.gostring_all) = true;

import "schema.tl.cmd.proto";



///////////////////////////////////////////////////////////////////////////////
// AccessPointRule <--
//  + TL_accessPointRule
//
message AccessPointRule {
    TLCmd cmd = 1;
    string class_name = 2;
    string phone_prefix_rules = 3;
    int32 dc_id = 4;
    repeated IpPort ips = 5;
}

//  accessPointRule#4679b65f phone_prefix_rules:string dc_id:int ips:vector<IpPort> = AccessPointRule;
//
message TL_accessPointRule {
    AccessPointRule data2 = 1;
}


///////////////////////////////////////////////////////////////////////////////
// BadMsgNotification <--
//  + TL_bad_msg_notification
//  + TL_bad_server_salt
//
message BadMsgNotification {
    TLCmd cmd = 1;
    string class_name = 2;
    int64 bad_msg_id = 3;
    int32 bad_msg_seqno = 4;
    int32 error_code = 5;
    int64 new_server_salt = 6;
}

//  bad_msg_notification#a7eff811 bad_msg_id:long bad_msg_seqno:int error_code:int = BadMsgNotification;
//
message TL_bad_msg_notification {
    BadMsgNotification data2 = 1;
}
//  bad_server_salt#edab447b bad_msg_id:long bad_msg_seqno:int error_code:int new_server_salt:long = BadMsgNotification;
//
message TL_bad_server_salt {
    BadMsgNotification data2 = 1;
}


///////////////////////////////////////////////////////////////////////////////
// DestroySessionRes <--
//  + TL_destroy_session_ok
//  + TL_destroy_session_none
//
message DestroySessionRes {
    TLCmd cmd = 1;
    string class_name = 2;
    int64 session_id = 3;
}

//  destroy_session_ok#e22045fc session_id:long = DestroySessionRes;
//
message TL_destroy_session_ok {
    DestroySessionRes data2 = 1;
}
//  destroy_session_none#62d350c9 session_id:long = DestroySessionRes;
//
message TL_destroy_session_none {
    DestroySessionRes data2 = 1;
}


///////////////////////////////////////////////////////////////////////////////
// FutureSalt <--
//  + TL_future_salt
//
message FutureSalt {
    TLCmd cmd = 1;
    string class_name = 2;
    int32 valid_since = 3;
    int32 valid_until = 4;
    int64 salt = 5;
}

//  future_salt#0949d9dc valid_since:int valid_until:int salt:long = FutureSalt;
//
message TL_future_salt {
    FutureSalt data2 = 1;
}


///////////////////////////////////////////////////////////////////////////////
// FutureSalts <--
//  + TL_future_salts
//
message FutureSalts {
    TLCmd cmd = 1;
    string class_name = 2;
    int64 req_msg_id = 3;
    int32 now = 4;
    repeated TL_future_salt salts = 5;
}

//  future_salts#ae500895 req_msg_id:long now:int salts:vector<future_salt> = FutureSalts;
//
message TL_future_salts {
    FutureSalts data2 = 1;
}


///////////////////////////////////////////////////////////////////////////////
// HttpWait <--
//  + TL_http_wait
//
message HttpWait {
    TLCmd cmd = 1;
    string class_name = 2;
    int32 max_delay = 3;
    int32 wait_after = 4;
    int32 max_wait = 5;
}

//  http_wait#9299359f max_delay:int wait_after:int max_wait:int = HttpWait;
//
message TL_http_wait {
    HttpWait data2 = 1;
}


///////////////////////////////////////////////////////////////////////////////
// IpPort <--
//  + TL_ipPort
//  + TL_ipPortSecret
//
message IpPort {
    TLCmd cmd = 1;
    string class_name = 2;
    int32 ipv4 = 3;
    int32 port = 4;
    bytes secret = 5;
}

//  ipPort#d433ad73 ipv4:int port:int = IpPort;
//
message TL_ipPort {
    IpPort data2 = 1;
}
//  ipPortSecret#37982646 ipv4:int port:int secret:bytes = IpPort;
//
message TL_ipPortSecret {
    IpPort data2 = 1;
}


///////////////////////////////////////////////////////////////////////////////
// MsgDetailedInfo <--
//  + TL_msg_detailed_info
//  + TL_msg_new_detailed_info
//
message MsgDetailedInfo {
    TLCmd cmd = 1;
    string class_name = 2;
    int64 msg_id = 3;
    int64 answer_msg_id = 4;
    int32 bytes = 5;
    int32 status = 6;
}

//  msg_detailed_info#276d3ec6 msg_id:long answer_msg_id:long bytes:int status:int = MsgDetailedInfo;
//
message TL_msg_detailed_info {
    MsgDetailedInfo data2 = 1;
}
//  msg_new_detailed_info#809db6df answer_msg_id:long bytes:int status:int = MsgDetailedInfo;
//
message TL_msg_new_detailed_info {
    MsgDetailedInfo data2 = 1;
}


///////////////////////////////////////////////////////////////////////////////
// MsgResendReq <--
//  + TL_msg_resend_req
//
message MsgResendReq {
    TLCmd cmd = 1;
    string class_name = 2;
    repeated int64 msg_ids = 3;
}

//  msg_resend_req#7d861a08 msg_ids:Vector<long> = MsgResendReq;
//
message TL_msg_resend_req {
    MsgResendReq data2 = 1;
}


///////////////////////////////////////////////////////////////////////////////
// MsgsAck <--
//  + TL_msgs_ack
//
message MsgsAck {
    TLCmd cmd = 1;
    string class_name = 2;
    repeated int64 msg_ids = 3;
}

//  msgs_ack#62d6b459 msg_ids:Vector<long> = MsgsAck;
//
message TL_msgs_ack {
    MsgsAck data2 = 1;
}


///////////////////////////////////////////////////////////////////////////////
// MsgsAllInfo <--
//  + TL_msgs_all_info
//
message MsgsAllInfo {
    TLCmd cmd = 1;
    string class_name = 2;
    repeated int64 msg_ids = 3;
    string info = 4;
}

//  msgs_all_info#8cc0d131 msg_ids:Vector<long> info:string = MsgsAllInfo;
//
message TL_msgs_all_info {
    MsgsAllInfo data2 = 1;
}


///////////////////////////////////////////////////////////////////////////////
// MsgsStateInfo <--
//  + TL_msgs_state_info
//
message MsgsStateInfo {
    TLCmd cmd = 1;
    string class_name = 2;
    int64 req_msg_id = 3;
    string info = 4;
}

//  msgs_state_info#04deb57d req_msg_id:long info:string = MsgsStateInfo;
//
message TL_msgs_state_info {
    MsgsStateInfo data2 = 1;
}


///////////////////////////////////////////////////////////////////////////////
// MsgsStateReq <--
//  + TL_msgs_state_req
//
message MsgsStateReq {
    TLCmd cmd = 1;
    string class_name = 2;
    repeated int64 msg_ids = 3;
}

//  msgs_state_req#da69fb52 msg_ids:Vector<long> = MsgsStateReq;
//
message TL_msgs_state_req {
    MsgsStateReq data2 = 1;
}


///////////////////////////////////////////////////////////////////////////////
// NewSession <--
//  + TL_new_session_created
//
message NewSession {
    TLCmd cmd = 1;
    string class_name = 2;
    int64 first_msg_id = 3;
    int64 unique_id = 4;
    int64 server_salt = 5;
}

//  new_session_created#9ec20908 first_msg_id:long unique_id:long server_salt:long = NewSession;
//
message TL_new_session_created {
    NewSession data2 = 1;
}


///////////////////////////////////////////////////////////////////////////////
// Pong <--
//  + TL_pong
//
message Pong {
    TLCmd cmd = 1;
    string class_name = 2;
    int64 msg_id = 3;
    int64 ping_id = 4;
}

//  pong#347773c5 msg_id:long ping_id:long = Pong;
//
message TL_pong {
    Pong data2 = 1;
}


///////////////////////////////////////////////////////////////////////////////
// RpcDropAnswer <--
//  + TL_rpc_answer_unknown
//  + TL_rpc_answer_dropped_running
//  + TL_rpc_answer_dropped
//
message RpcDropAnswer {
    TLCmd cmd = 1;
    string class_name = 2;
    int64 msg_id = 3;
    int32 seq_no = 4;
    int32 bytes = 5;
}

//  rpc_answer_unknown#5e2ad36e = RpcDropAnswer;
//
message TL_rpc_answer_unknown {
    RpcDropAnswer data2 = 1;
}
//  rpc_answer_dropped_running#cd78e586 = RpcDropAnswer;
//
message TL_rpc_answer_dropped_running {
    RpcDropAnswer data2 = 1;
}
//  rpc_answer_dropped#a43ad8b7 msg_id:long seq_no:int bytes:int = RpcDropAnswer;
//
message TL_rpc_answer_dropped {
    RpcDropAnswer data2 = 1;
}


///////////////////////////////////////////////////////////////////////////////
// RpcError <--
//  + TL_rpc_error
//
message RpcError {
    TLCmd cmd = 1;
    string class_name = 2;
    int32 error_code = 3;
    string error_message = 4;
}

//  rpc_error#2144ca19 error_code:int error_message:string = RpcError;
//
message TL_rpc_error {
    RpcError data2 = 1;
}


///////////////////////////////////////////////////////////////////////////////
// help_ConfigSimple <--
//  + TL_help_configSimple
//
message help_ConfigSimple {
    TLCmd cmd = 1;
    string class_name = 2;
    int32 date = 3;
    int32 expires = 4;
    int32 dc_id = 5;
    repeated IpPort ip_port_list = 6;
    repeated AccessPointRule rules = 7;
}

//  help.configSimple#d997c3c5 date:int expires:int dc_id:int ip_port_list:Vector<IpPort> = help.ConfigSimple;
//  help.configSimple#5a592a6c date:int expires:int rules:vector<AccessPointRule> = help.ConfigSimple;
//
message TL_help_configSimple {
    help_ConfigSimple data2 = 1;
}

